<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mtype</groupId>
    <artifactId>code-editor</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <javafx.version>21.0.5</javafx.version>
        <richtextfx.version>0.11.5</richtextfx.version>
        <lsp4j.version>0.24.0</lsp4j.version>
        <gson.version>2.13.0</gson.version>
        <slf4j.version>2.0.16</slf4j.version>

        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <javafx-maven-plugin.version>0.0.8</javafx-maven-plugin.version>
        <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
        <jpackage-maven-plugin.version>1.6.5</jpackage-maven-plugin.version>

        <dist.icon>${project.basedir}/src/main/resources/icons/mtype-logo.png</dist.icon>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>linux</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>mac</classifier>
        </dependency>

        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>${richtextfx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.lsp4j</groupId>
            <artifactId>org.eclipse.lsp4j</artifactId>
            <version>${lsp4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.lsp4j</groupId>
            <artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
            <version>${lsp4j.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>25</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven-plugin.version}</version>
                <configuration>
                    <mainClass>org.mtype.editor.app.EditorApp</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dist</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>${maven-shade-plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals><goal>shade</goal></goals>
                                <configuration>
                                    <createDependencyReducedPom>false</createDependencyReducedPom>
                                    <outputFile>${project.build.directory}/jpackage-input/app.jar</outputFile>
                                    <transformers>
                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                            <mainClass>org.mtype.editor.app.Launcher</mainClass>
                                        </transformer>
                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                    </transformers>
                                    <filters>
                                        <filter>
                                            <artifact>*:*</artifact>
                                            <excludes>
                                                <exclude>META-INF/*.SF</exclude>
                                                <exclude>META-INF/*.DSA</exclude>
                                                <exclude>META-INF/*.RSA</exclude>
                                                <exclude>module-info.class</exclude>
                                            </excludes>
                                        </filter>
                                    </filters>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals><goal>jpackage</goal></goals>
                                <configuration>
                                    <name>mType Editor</name>
                                    <appVersion>1.0.0</appVersion>
                                    <vendor>mType</vendor>
                                    <type>APP_IMAGE</type>
                                    <destination>${project.build.directory}/dist</destination>
                                    <input>${project.build.directory}/jpackage-input</input>
                                    <mainJar>app.jar</mainJar>
                                    <mainClass>org.mtype.editor.app.Launcher</mainClass>
                                    <icon>${dist.icon}</icon>
                                    <javaOptions>
                                        <option>-Xmx1g</option>
                                    </javaOptions>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>icon-windows</id>
            <activation>
                <os><family>windows</family></os>
            </activation>
            <properties>
                <dist.icon>${project.basedir}/src/main/resources/icons/mtype-logo.ico</dist.icon>
            </properties>
        </profile>

        <profile>
            <id>icon-mac</id>
            <activation>
                <os><family>mac</family></os>
            </activation>
            <properties>
                <dist.icon>${project.basedir}/src/main/resources/icons/mtype-logo.icns</dist.icon>
            </properties>
        </profile>

        <profile>
            <id>icon-linux</id>
            <activation>
                <os><name>linux</name></os>
            </activation>
            <properties>
                <dist.icon>${project.basedir}/src/main/resources/icons/mtype-logo.png</dist.icon>
            </properties>
        </profile>
    </profiles>

</project>
